--- a/build
+++ b/build
@@ -8,12 +8,13 @@ declare -gxr WORKDIR_BUILD="$WORKDIR_LOCAL/tmp/latest" \
 
 source "$WORKDIR_SRC/core.sh"
 source "$WORKDIR_SRC/sys.sh"
+source "$WORKDIR_SRC/log.sh"
 source "$WORKDIR_SRC/fs.sh"
 
 build_file(){
   declare -n target=build_file; target="${1/"$WORKDIR_SRC"/"$WORKDIR_BUILD"}"; target="${target/.sh/}";
   declare name="${target##*/}"
-  sys_command "$name" && fail "module name conflict '$name'"
+  sys_command "$name" && fail $? "module name conflict '$name'"
   cp "$1" "$target"
 }
 
@@ -21,7 +22,7 @@ if is_dir "$WORKDIR_BUILD"; then
   mv "$WORKDIR_BUILD" "$WORKDIR_BUILD~$( date +"%Y-%m-%d_%H-%M-%S%z" )"
 fi
 
-mkdir -p "$WORKDIR_BUILD"
+log mkdir -p "$WORKDIR_BUILD"
 
 declare file; while file_list "$WORKDIR_SRC" '*.sh'; do
   build_file "$file"
